--- a/src/app/AddressBookComponent/add-address-book/add-address-book.component.scss
+++ b/src/app/AddressBookComponent/add-address-book/add-address-book.component.scss
@@ -86,7 +86,7 @@ select {
     resize: vertical;
     border: 1px solid;
     letter-spacing: 0px;
-    color: #8f98a1;
+    color: black;
     background-color: transparent;
 }
 .cityStateSelect{
